--- a/style.css
+++ b/style.css
@@ -39,10 +39,19 @@ a {
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-}
-#content {
     color: white;
-    z-index: 1;
+    text-align: center;
+}
+#api{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url("tuyen-vo-tS-jh0M6JoA-unsplash.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     text-align: center;
 }
 #click {
